--- a/frontend/src/components/StopListElements/StopListElements.module.css
+++ b/frontend/src/components/StopListElements/StopListElements.module.css
@@ -1,1 +1,44 @@
-.StopListElements {}
+.StopListElements {
+
+}
+
+.Container {
+    z-index: 10;
+    position: fixed;
+    min-height: 5%;
+}
+
+.ShowList {
+
+}
+
+.HideList {
+    height: 5%;
+    position: fixed;
+}
+
+.ShowModal {
+    display: block;
+}
+
+.HideModal {
+    display: none;
+}
+
+.Modal {
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0, 0, 0); /* Fallback color */
+    background-color: rgba(0, 0, 0, 0.4); /* Black w/ opacity */
+}
+
+.Bar {
+    margin-left: 50%;
+    margin-right: 50%;
+    bottom: 2%;
+}
