Handle undefined orders

--- a/frontend/src/components/Orders/Orders.module.css
+++ b/frontend/src/components/Orders/Orders.module.css
@@ -19,3 +19,9 @@
     bottom: 3%;
     left: 5%;
 }
+
+.CenteredContent {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
