+ Login or register forms, refactoring

--- a/frontend/src/components/Order/Order.module.css
+++ b/frontend/src/components/Order/Order.module.css
@@ -1,9 +1,16 @@
-.Order {}
+.Order {
+}
+
 .Removed {
     animation: swipe 0.5s forwards;
 }
+
 @keyframes swipe {
-    0% {transform: translateX(0%)}
-    100% {transform: translateX(-100%)}
+    0% {
+        transform: translateX(0%)
+    }
+    100% {
+        transform: translateX(-100%)
+    }
 }
 
