--- a/frontend/src/components/LoginForm/LoginForm.module.css
+++ b/frontend/src/components/LoginForm/LoginForm.module.css
@@ -1,2 +1,61 @@
 .LoginForm {
 }
+
+.container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 50px;
+}
+
+.heading {
+    color: #333;
+    margin-bottom: 20px;
+}
+
+.form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.formGroup {
+    margin-bottom: 15px;
+    width: 300px;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+}
+
+.label {
+    font-weight: bold;
+    color: #333;
+    margin-bottom: 5px;
+}
+
+.input {
+    width: 300px;
+    height: 30px;
+    border: 1px solid #ccc;
+    border-radius: 0.6rem;
+    padding: 5px;
+}
+
+.error {
+    color: red;
+    margin-bottom: 10px;
+}
+
+.button {
+    padding: 10px;
+    width: 150px;
+    background-color: #bcba91;
+    border: none;
+    border-radius: 0.8rem;
+    color: #fff;
+    cursor: pointer;
+}
+
+.buttonHover {
+    background-color: #a99f7a;
+}
