--- a/frontend/src/components/LoginForm/LoginForm.module.css
+++ b/frontend/src/components/LoginForm/LoginForm.module.css
@@ -1,61 +1,58 @@
-.LoginForm {
-}
-
 .container {
     display: flex;
-    flex-direction: column;
+    justify-content: center;
     align-items: center;
-    margin: 50px;
-}
-
-.heading {
-    color: #333;
-    margin-bottom: 20px;
+    height: 100vh;
+    background-color: #f2f2f2; /* Цвет фона */
 }
 
 .form {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+    background-color: #fff;
+    padding: 40px;
+    border-radius: 20px;
+    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.1); /* Увеличенная тень */
 }
 
 .formGroup {
-    margin-bottom: 15px;
-    width: 300px;
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
+    margin-bottom: 25px;
+    width: 100%;
 }
 
 .label {
     font-weight: bold;
     color: #333;
-    margin-bottom: 5px;
+    margin-bottom: 10px;
 }
 
 .input {
-    width: 300px;
-    height: 30px;
+    width: 100%;
+    height: 50px;
     border: 1px solid #ccc;
-    border-radius: 0.6rem;
-    padding: 5px;
+    border-radius: 8px;
+    padding: 15px;
+    box-sizing: border-box;
+    font-size: 25px;
 }
 
 .error {
     color: red;
+    font-weight: bold;
     margin-bottom: 10px;
 }
 
 .button {
-    padding: 10px;
-    width: 150px;
-    background-color: #bcba91;
+    padding: 15px;
+    width: 50%;
+    background-color: #a99f7a;
     border: none;
-    border-radius: 0.8rem;
+    border-radius: 20px;
     color: #fff;
     cursor: pointer;
+    transition: background-color 0.3s ease;
+    font-weight: bold;
+    font-size: 18px;
 }
 
-.buttonHover {
-    background-color: #a99f7a;
+.button:hover {
+    background-color: #91826b;
 }
