--- a/frontend/src/components/MenuButtons/MenuButtons.module.css
+++ b/frontend/src/components/MenuButtons/MenuButtons.module.css
@@ -1,2 +1,21 @@
 .MenuButtons {
+    margin-top: 4rem;
+    margin-bottom: 3rem;
+}
+
+@keyframes slideIn {
+    0% {
+        opacity: 0;
+        transform: translateY(-50px);
+    }
+    100% {
+        opacity: 1;
+        transform: translateY(0);
+    }
+}
+
+.animatedButton {
+    animation: slideIn 0.8s ease forwards;
+    opacity: 0;
+    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.3);
 }
