--- a/frontend/src/components/ScheduleBox/ScheduleBox.module.css
+++ b/frontend/src/components/ScheduleBox/ScheduleBox.module.css
@@ -1,12 +1,17 @@
 .ScheduleBox {
-    width: 40%;
-    margin-left: auto;
-    margin-right: auto;
-    margin-bottom: 2rem;
+    margin: 2rem auto;
+    padding: 20px;
+    width: 70%;
+    text-align: center;
+    background-color: #bcba91;
+    border: 1px solid #a09e73;
+    border-radius: 12px;
+    box-shadow: 0 16px 32px rgba(0, 0, 0, 0.3);
 }
 
 .Header {
-    font-size: 1.5em;
-    float: left;
+    font-weight: bold;
+    font-size: 30px;
 }
+
 
