--- a/frontend/src/components/Users/Users.module.css
+++ b/frontend/src/components/Users/Users.module.css
@@ -1,4 +1,3 @@
-/* Users.module.css */
 .Users {
     text-align: center;
 }
@@ -10,16 +9,15 @@
 }
 
 .userCard {
-    border: 1px solid #ccc;
-    border-radius: 8px;
-    margin: 10px;
-    padding: 10px;
-    width: 50%;
+    border: 1px solid #a09e73;
+    border-radius: 12px;
+    margin: 20px auto;
+    padding: 20px;
+    width: 70%;
     text-align: center;
     background-color: #bcba91;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 16px 32px rgba(0, 0, 0, 0.3);
 }
 
 .userInfo {
 }
-
