--- a/frontend/src/components/Order/Order.module.css
+++ b/frontend/src/components/Order/Order.module.css
@@ -1,16 +1,25 @@
 .Order {
+    width: 100%;
+    max-width: 600px;
+    background-color: #f8f8f8;
+    margin-bottom: 10px;
+    padding: 10px;
+    border-radius: 5px;
+    box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
 }
 
-.Removed {
-    animation: swipe 0.5s forwards;
+.Order.Removed {
+    opacity: 0;
+    transition: opacity 0.5s ease-out;
 }
 
-@keyframes swipe {
-    0% {
-        transform: translateX(0%)
-    }
-    100% {
-        transform: translateX(-100%)
-    }
+.TextArea {
+    width: 100%;
+    height: 100%;
+    padding: 10px;
+    font-size: 16px;
+    border: none;
+    background-color: transparent;
+    resize: none;
+    overflow: hidden;
 }
-
