--- a/frontend/src/components/StopListElements/StopListElements.module.css
+++ b/frontend/src/components/StopListElements/StopListElements.module.css
@@ -5,8 +5,17 @@
 .Container {
     z-index: 10;
     position: fixed;
+    top: 70px;
+    left: 0;
+    width: 100%;
     min-height: 5%;
 }
+.StopListElements {
+    width: 100%;
+    max-width: 600px;
+    margin-top: 6rem;
+}
+
 
 .ShowList {
 
@@ -42,3 +51,23 @@
     margin-right: 50%;
     bottom: 2%;
 }
+/*!* StopListElements.module.css *!*/
+
+/*.Container {*/
+/*    display: flex;*/
+/*    flex-direction: column;*/
+/*    align-items: center;*/
+/*    padding: 20px;*/
+/*}*/
+
+
+/*.Bar {*/
+/*    position: absolute;*/
+/*    top: 0;*/
+/*    left: 50%;*/
+/*    transform: translateX(-50%);*/
+/*    width: 30px;*/
+/*    height: 5px;*/
+/*    background-color: #ccc;*/
+/*    cursor: pointer;*/
+/*}*/
