--- a/frontend/src/components/UserProfile/UserProfile.module.css
+++ b/frontend/src/components/UserProfile/UserProfile.module.css
@@ -7,7 +7,7 @@
 }
 
 .container {
-    margin-top: 20px;
+    margin-top: 5rem;
     display: flex;
     flex-direction: column;
     align-items: center;
