--- a/frontend/src/components/Orders/Orders.module.css
+++ b/frontend/src/components/Orders/Orders.module.css
@@ -19,19 +19,29 @@
 }
 
 .NewOrder {
+    position: fixed;
+    top: 5rem;
+    left: 0;
     width: 100%;
-    max-width: 600px;
-    margin-top: 7rem;
+    height: 100%;
+    padding: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
 }
 
 .TextArea {
-    width: 100%;
-    height: 200px;
+    width: calc(100% - -40px); /* Учитываем внешние отступы */
+    height: calc(100% - -100px); /* Учитываем внешние отступы */
     padding: 10px;
     font-size: 16px;
-    border: 1px solid #ccc;
+    border: 1px solid #ffffff;
     border-radius: 5px;
     resize: none;
+    margin-bottom: 20px;
+    user-select: none;
+    outline: none;
 }
 
 .CenteredContent {
@@ -40,4 +50,15 @@
     align-items: center;
     height: 200px;
     font-size: 20px;
+}
+
+@keyframes slideIn {
+    from {
+        opacity: 0;
+        transform: translateY(-20px);
+    }
+    to {
+        opacity: 1;
+        transform: translateY(0);
+    }
 }
