--- a/frontend/src/components/UserProfile/UserProfile.module.css
+++ b/frontend/src/components/UserProfile/UserProfile.module.css
@@ -1,8 +1,4 @@
-.UserProfile {
-}
-
-
-.text-center {
+.textCenter {
     text-align: center;
 }
 
@@ -17,6 +13,42 @@
     color: #bcba91;
 }
 
+.imageContainer {
+    position: relative;
+    width: 150px;
+    height: 150px;
+    margin-bottom: 20px;
+}
+
+.defaultImage {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+    background-color: #eee; /* Цвет фона по умолчанию */
+    color: #666; /* Цвет текста */
+    font-size: 24px;
+}
+
+.profileImage {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 50%; /* Делаем изображение круглым */
+}
+
+.imageInput {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    opacity: 0;
+    cursor: pointer;
+}
+
 .inputContainer {
     display: flex;
     flex-direction: column;
@@ -27,20 +59,6 @@
 .label {
     font-weight: bold;
     color: #333;
-}
-
-.textarea {
-    resize: none;
-    width: 300px;
-    height: 30px;
-    margin-bottom: 10px;
-    border-radius: 5px;
-    padding: 5px;
-    overflow: hidden;
-}
-
-.textareaError {
-    border: 1px solid red;
 }
 
 .input {
@@ -62,13 +80,23 @@
 
 .button {
     padding: 5px 10px;
-    background-color: #bcba91;
-    border: 1px solid #bcba91;
+    border: none;
     border-radius: 1rem;
     color: #fff;
     cursor: pointer;
+    width: 200px;
+    height: 40px;
 }
 
-.buttonHover {
+.saveChangesButton {
+    background-color: #bcba91;
+}
+
+.logoutButton {
+    background-color: #bcba91;
+    margin-top: 10px;
+}
+
+.button:hover {
     background-color: #a99f7a;
 }
