--- a/frontend/src/components/Users/Users.module.css
+++ b/frontend/src/components/Users/Users.module.css
@@ -18,7 +18,68 @@
     text-align: center;
     background-color: #bcba91;
     box-shadow: 0 16px 32px rgba(0, 0, 0, 0.3);
+    cursor: pointer;
 }
 
-.userInfo {
+.userCard:hover {
+    background-color: #d5d4a6;
+}
+
+.overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    backdrop-filter: blur(2px);
+}
+
+.modal {
+    margin-top: 5rem;
+    background-color: white;
+    border-radius: 12px;
+    padding: 20px;
+    max-height: 70vh;
+    max-width: 80%;
+}
+
+.userDetails button {
+    margin-top: 10px;
+    background-color: #bcba91;
+    border: none;
+    border-radius: 5px;
+    padding: 5px 10px;
+    cursor: pointer;
+}
+
+.userDetails button:hover {
+    background-color: #c6c599;
+}
+
+.userDetails {
+    text-align: left;
+    padding: 20px;
+    background-color: #fff;
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    max-height: 60vh;
+    overflow-y: auto;
+}
+
+.userDetails h3 {
+    margin-top: 0;
+    color: #333;
+}
+
+.userDetails p {
+    margin: 0 0 10px;
+    color: #666;
+}
+
+.userDetails .closeButton:hover {
+    background-color: #c6c599;
 }
