--- a/frontend/src/components/Orders/Orders.module.css
+++ b/frontend/src/components/Orders/Orders.module.css
@@ -16,27 +16,94 @@
     display: flex;
     justify-content: flex-end;
     margin-bottom: 20px;
+    position: relative;
 }
+
+.Actions button {
+    color: #ffffff;
+    border: 1px solid #a09e73;
+    border-radius: 12px;
+    margin: 20px auto;
+    padding: 20px;
+    width: 70%;
+    text-align: center;
+    background-color: #bcba91;
+    box-shadow: 0 16px 32px rgba(0, 0, 0, 0.3);
+    cursor: pointer;
+    animation: scaleIn 0.3s ease;
+}
+ /* maybe
+/*.Actions button:hover {*/
+/*    transform: scale(1.2);*/
+/*    transition: transform 0.3s ease;*/
+/*}*/
+
+/*@keyframes scaleIn {*/
+/*    from {*/
+/*        transform: scale(1);*/
+/*    }*/
+/*    to {*/
+/*        transform: scale(1.2);*/
+/*    }*/
+/*}*/
 
 .NewOrder {
     position: fixed;
-    top: 5rem;
+    top: 0;
     left: 0;
-    width: 100%;
-    height: 100%;
+    width: 100vw;
+    height: 100vh;
     padding: 20px;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
+    background-color: #ffffff;
+    z-index: 9999;
+    animation: fadeIn 0.3s ease, blurIn 0.3s ease;
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.3);
 }
 
+@keyframes slideIn {
+    from {
+        opacity: 0;
+        transform: scale(0.5);
+    }
+    to {
+        opacity: 1;
+        transform: scale(1);
+    }
+}
+
+.Open {
+    animation: fadeIn 0.3s ease, blurIn 0.3s ease;
+}
+
+@keyframes fadeIn {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
+}
+
+@keyframes blurIn {
+    from {
+        backdrop-filter: blur(0);
+    }
+    to {
+        backdrop-filter: blur(100px); /* Максимальное значение размытия */
+    }
+}
+
+
 .TextArea {
-    width: calc(100% - -40px); /* Учитываем внешние отступы */
-    height: calc(100% - -100px); /* Учитываем внешние отступы */
+    width: calc(100% - -40px);
+    height: calc(100% - -100px);
     padding: 10px;
     font-size: 16px;
-    border: 1px solid #ffffff;
+    border: 1rem solid #ffffff;
     border-radius: 5px;
     resize: none;
     margin-bottom: 20px;
@@ -50,15 +117,4 @@
     align-items: center;
     height: 200px;
     font-size: 20px;
-}
-
-@keyframes slideIn {
-    from {
-        opacity: 0;
-        transform: translateY(-20px);
-    }
-    to {
-        opacity: 1;
-        transform: translateY(0);
-    }
 }
