--- a/frontend/src/components/CustomNavbar/CustomNavbar.module.css
+++ b/frontend/src/components/CustomNavbar/CustomNavbar.module.css
@@ -2,12 +2,13 @@
     position: fixed;
     top: 0;
     left: 0;
-    width: 100%; /* Занимает всю ширину экрана */
-    height: 70px; /* Высота плашки */
-    border-bottom: 1px solid gray; /* Линия под плашкой */
-    background-color: #ffffff; /* Цвет фона плашки */
-    padding: 0 20px; /* Отступы слева и справа */
-    box-sizing: border-box; /* Учитываем отступы внутри размеров */
+    width: 100%;
+    height: 4rem;
+    max-width: 1000px;
+    background-color: #ffffff;
+    margin-bottom: 10px;
+    padding: 10px;
+    border-radius: 5px;
 }
 @keyframes slideIn {
     0% {
