--- a/frontend/src/components/Order/Order.module.css
+++ b/frontend/src/components/Order/Order.module.css
@@ -1,6 +1,7 @@
 .Order {
     width: 100%;
-    max-width: 600px;
+    max-width: 1000px;
+    min-width: 240px;
     background-color: #f8f8f8;
     margin-bottom: 10px;
     padding: 10px;
@@ -16,6 +17,7 @@
 .TextArea {
     width: 100%;
     height: 100%;
+    max-width: 1000px;
     padding: 10px;
     font-size: 16px;
     border: none;
@@ -23,3 +25,4 @@
     resize: none;
     overflow: hidden;
 }
+
