--- a/frontend/src/components/StopListElement/StopListElement.module.css
+++ b/frontend/src/components/StopListElement/StopListElement.module.css
@@ -1,22 +1,20 @@
 .StopListElement {
-    background-color: #ffffff;
+    background-color: white;
     display: flex;
     align-items: center;
     border: none;
     border-radius: 5px;
-    margin-bottom: 1rem;
     cursor: pointer;
     transition: background-color 0.3s;
 }
 
 .StopListElement textarea {
-    width: calc(100% - 70px);
     font-size: 16px;
     border: none;
     border-radius: 5px;
     user-select: none;
     outline: none;
-    background-color: #ffffff;
+    background-color: white;
 }
 
 .StopListElement button {
@@ -25,7 +23,7 @@
     right: 10px;
     transform: translateY(-50%);
     font-size: 16px;
-    color: #ffffff;
+    color: white;
     border: none;
     border-radius: 5px;
     cursor: pointer;
@@ -33,5 +31,5 @@
 }
 
 .StopListElement button:hover {
-    background-color: #ffffff;
+    background-color: white;
 }
