--- a/frontend/src/components/Schedule/Schedule.module.css
+++ b/frontend/src/components/Schedule/Schedule.module.css
@@ -1,5 +1,19 @@
 .Schedule {
+    padding: 20px;
+}
 
+.Schedule h2 {
+    text-align: center;
+    color: #333;
+    font-size: 24px;
+    margin-bottom: 10px;
+}
+
+.ScheduleBox {
+    background-color: #f9f9f9;
+    border-radius: 5px;
+    padding: 10px;
+    margin-bottom: 10px;
 }
 
 .CenteredContent {
