--- a/frontend/src/custom.scss
+++ b/frontend/src/custom.scss
@@ -1,6 +1,6 @@
 // change the theme
 $theme-colors: (
-        "primary": #B5B285,
+        "primary": #000000,
 );
 
 // Import Bootstrap and its default variables
