--- a/frontend/src/global.css
+++ b/frontend/src/global.css
@@ -12,7 +12,7 @@ body {
     --font-roboto: Roboto;
     --font-sf-pro-text: "SF Pro Text";
     --font-open-sans: "Open Sans";
-    --primary-color: #B5B285;
+    --primary-color: #000000;
 
     /* font sizes */
     --font-size-base: 1rem;
