--- a/frontend/src/components/CustomNavbar/CustomNavbar.module.css
+++ b/frontend/src/components/CustomNavbar/CustomNavbar.module.css
@@ -1,21 +1,7 @@
 .CustomNavbar {
-    position: fixed;
     top: 0;
-    left: 0;
+    position: fixed;
     width: 100%;
     height: 4rem;
-    max-width: 1000px;
-    background-color: #ffffff;
-    margin-bottom: 10px;
-    padding: 10px;
-    border-radius: 5px;
+    align-items: center;
 }
-@keyframes slideIn {
-    0% {
-        opacity: 0;
-        transform: translateY(-50px);
-    }
-    100% {
-        opacity: 1;
-        transform: translateY(0);
-    }}
