--- a/frontend/src/components/MenuButtons/MenuButtons.module.css
+++ b/frontend/src/components/MenuButtons/MenuButtons.module.css
@@ -8,3 +8,25 @@
     opacity: 0;
     box-shadow: 0 8px 16px rgba(0, 0, 0, 0.3);
 }
+
+.menuContainer {
+    border: 1px solid #ccc;
+    background-color: #000000;
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.3);
+    width: 22rem;
+    margin: 0 auto;
+}
+
+.btn {
+    border: 1px solid #ccc;
+    width: 100%;
+    height: 4rem;
+    margin-bottom: 0.1rem; /* Добавляем немного отступа между кнопками */
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); /* Добавим тень */
+    font-size: 1.5rem;
+    text-shadow: 0 2px 4px rgba(0, 0, 0, 0.8);
+}
+
+
