--- a/frontend/src/components/MenuButtons/MenuButtons.module.css
+++ b/frontend/src/components/MenuButtons/MenuButtons.module.css
@@ -1,4 +1,5 @@
 .MenuButtons {
+    width: 100%;
     margin-top: 4rem;
     margin-bottom: 3rem;
 }
@@ -10,23 +11,33 @@
 }
 
 .menuContainer {
+    padding: 0.2rem;
     border: 1px solid #ccc;
     background-color: #000000;
-    padding: 20px;
-    border-radius: 10px;
+    border-radius: 20px;
     box-shadow: 0 8px 16px rgba(0, 0, 0, 0.3);
-    width: 22rem;
+    width: 90%;
     margin: 0 auto;
 }
 
 .btn {
     border: 1px solid #ccc;
+    border-radius: 20px;
     width: 100%;
     height: 4rem;
-    margin-bottom: 0.1rem; /* Добавляем немного отступа между кнопками */
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); /* Добавим тень */
-    font-size: 1.5rem;
+    margin-bottom: 0.0001rem;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
     text-shadow: 0 2px 4px rgba(0, 0, 0, 0.8);
+    transition: background-color 0.3s ease, transform 0.4s ease, box-shadow 0.3s ease;
+}
+
+.taskContainer {
+    border: 1px solid #ccc;
+    background-color: #000000;
+    border-radius: 20px;
+    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.3);
+    width: 90%;
+    margin: 0 auto;
 }
 
 
