--- a/frontend/src/components/Schedule/Schedule.module.css
+++ b/frontend/src/components/Schedule/Schedule.module.css
@@ -1,5 +1,4 @@
 .Schedule {
-    padding: 20px;
 }
 
 .Schedule h2 {
@@ -14,7 +13,9 @@
     border-radius: 5px;
     padding: 10px;
     margin-bottom: 10px;
+    list-style: none;
 }
+
 
 .CenteredContent {
     display: flex;
