--- a/frontend/src/components/ScheduleBox/ScheduleBox.module.css
+++ b/frontend/src/components/ScheduleBox/ScheduleBox.module.css
@@ -1,17 +1,15 @@
 .ScheduleBox {
-    margin: 2rem auto;
-    padding: 20px;
-    width: 70%;
+    margin: 1rem auto;
+    width: 90%;
     text-align: center;
-    background-color: #bcba91;
-    border: 1px solid #a09e73;
-    border-radius: 12px;
+    background-color: #000000;
+    border: 1px solid #ccc;
+    border-radius: 20px;
     box-shadow: 0 16px 32px rgba(0, 0, 0, 0.3);
+    height: 6rem;
 }
 
 .Header {
     font-weight: bold;
-    font-size: 30px;
+    font-size: 20px;
 }
-
-
