--- a/frontend/src/components/Chat/Chat.module.css
+++ b/frontend/src/components/Chat/Chat.module.css
@@ -1,5 +1,5 @@
 .Chat {
-    padding-top: 0rem;
+    padding-top: 0;
     display: flex;
     flex-direction: column;
     height: 100vh;
@@ -8,7 +8,7 @@
 }
 
 .Chat__messages {
-    margin-bottom: 4rem;
+    margin-top: 3rem;
     flex: 1;
     overflow-y: auto;
     padding: 10px;
@@ -16,28 +16,29 @@
 }
 
 .Chat__input {
-    display: flex;
-    align-items: center;
-    padding: 5px;
-    background-color: #f9f9f9;
-    position: fixed;
-    bottom: 0;
-    left: 0;
+    background-color: black;
     width: 100%;
-    height: 3rem;
-    z-index: 1;
-    border-top: 1px solid #ddd;
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
+    border-top-left-radius: 0.8rem;
+    border-top-right-radius: 0.8rem;
+    border: 0.1rem solid black;
+    transition: height 0.3s ease;
 }
 
 .Chat__input textarea {
+    color: white;
+    background: #3d3c3c;
+    margin: auto 1px;
     flex: 1;
-    size: 2rem;
-    margin-right: 10px;
-    padding: 8px;
+    min-height: 1.5rem;
+    max-height: 10rem;
     resize: none;
-    border: 1px solid #ccc;
+    border: 1px solid #312f2f;
     border-radius: 20px;
     overflow-y: auto;
+    transition: height 0.3s ease;
 }
 
 .Chat__input Button {
@@ -54,14 +55,14 @@
 }
 
 .Chat__message {
-    margin: 10px 0;
+    margin: 5px 0 0 0;
+    border-radius: 20px;
     display: flex;
     flex-direction: column;
 }
 
 .Chat__myMessage {
-    border-radius: 20px;
-    padding: 10px;
+    padding: 5px;
     max-width: 70%;
     align-self: flex-end;
     background-color: #2d2d2d;
@@ -69,26 +70,41 @@
 }
 
 .Chat__otherMessage {
+    padding: 5px;
     border-radius: 20px;
-    padding: 10px;
     max-width: 70%;
     align-self: flex-start;
     background-color: #f0f0f0;
+    display: flex;
+    align-items: flex-end;
+}
+
+.Chat__otherMessage .messageBox {
+    flex-direction: column;
+    align-items: flex-end;
+    max-width: 100%;
+}
+
+.Chat__otherMessage .avatar {
+    margin-right: 10px;
+    margin-bottom: 10px;
+}
+
+.Chat__otherMessage img {
+    width: 32px;
+    height: 32px;
+    border-radius: 50%;
 }
 
 .Chat__otherMessage .author {
     font-weight: bold;
+    left: 0;
     margin-bottom: 0.3rem;
 }
 
 .time {
+    align-self: flex-end;
     font-size: 0.8rem;
     color: #666;
-    margin-left: auto;
-}
-
-.Chat__input textarea::placeholder {
-    font-size: 0.8rem; /* Уменьшаем размер шрифта placeholder */
-    line-height: 1rem; /* Уменьшаем высоту строки */
 }
 
