--- a/frontend/src/components/Chat/Chat.module.css
+++ b/frontend/src/components/Chat/Chat.module.css
@@ -9,6 +9,7 @@
 
 .Chat__messages {
     margin-top: 3rem;
+    margin-bottom: 3.5rem;
     flex: 1;
     overflow-y: auto;
     padding: 10px;
@@ -16,6 +17,8 @@
 }
 
 .Chat__input {
+    position: fixed;
+    bottom: 0;
     background-color: black;
     width: 100%;
     display: flex;
