--- a/frontend/src/components/MenuButtons/MenuButtons.module.css
+++ b/frontend/src/components/MenuButtons/MenuButtons.module.css
@@ -11,9 +11,9 @@
 }
 
 .menuContainer {
-    padding: 0.2rem;
+    padding: 0.4rem;
     border: 1px solid #ccc;
-    background-color: #000000;
+    background-color: #787878;
     border-radius: 20px;
     box-shadow: 0 8px 16px rgba(0, 0, 0, 0.3);
     width: 90%;
@@ -40,4 +40,17 @@
     margin: 0 auto;
 }
 
+.box {
+    padding: 1rem;
+}
 
+.box h3 {
+    margin-bottom: 0.5rem;
+    font-size: 1.5rem;
+}
+
+.box p {
+    margin: 0;
+    font-size: 1rem;
+    color: #555;
+}
