--- a/frontend/src/components/Order/Order.module.css
+++ b/frontend/src/components/Order/Order.module.css
@@ -2,11 +2,13 @@
     width: 100%;
     max-width: 1000px;
     min-width: 240px;
-    background-color: #f8f8f8;
-    margin-bottom: 10px;
+    color: #ffffff;
+    background-color: #000000;
+    margin-bottom: 0.1rem;
     padding: 10px;
-    border-radius: 5px;
-    box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
+    border-radius: 10px;
+    border: 1px solid #ccc;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
 }
 
 .Order.Removed {
